# pkmn-cli

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  homebrew.yml  release-artifacts.yml
Pkmn Unified CLI Plan/: HANDOFF_FOR_NEW_CHAT.md  UNIFIED_PKMN_CLI_PROJECT_PLAN.md
docs/: ALL_COMMANDS.md  ARCHITECTURE.md  AUTOMATION_AND_BATCH.md  BEGINNERS_GUIDE.md  COMMAND_REFERENCE.md  COMPLETE_USAGE_GUIDE.md  EDIT_MODE.md  FUTURE_FIRERED_PLAN.md  HOMEBREW_INSTALL.md  INSTALL.md  PRIVACY_AND_PUBLICATION.md  PROOF_WORKFLOW.md  RECONSTRUCT_MODE.md  RED_JSON_SCHEMA.md  RELEASE_CHECKLIST.md  SELF_CONTAINED_RED_ENGINE_PLAN.md  TROUBLESHOOTING.md  pkmn.1
examples/: .gitkeep  README.md
packaging/homebrew/: .gitkeep  pkmn-cli.rb
packaging/linux/: README.md
packaging/macos/: build-universal.sh
packaging/sbom/: pkmn-cli.spdx.json
resources/: README.md
scripts/: .gitkeep  privacy-scan.sh  verify-release.sh
src/: main.cpp
src/app/: CommandCatalog.cpp  CommandCatalog.hpp  CommandRouter.cpp  CommandRouter.hpp  ExitCode.hpp  Version.hpp
src/commands/catalog/: CatalogCommand.cpp  CatalogCommand.hpp
src/commands/compare/: .gitkeep  CompareCommand.cpp  CompareCommand.hpp
src/commands/completion/: CompletionCommand.cpp  CompletionCommand.hpp
src/commands/config/: .gitkeep  ConfigCommand.cpp  ConfigCommand.hpp
src/commands/doctor/: DoctorCommand.cpp  DoctorCommand.hpp
src/commands/proof/: .gitkeep  ProofCommand.cpp  ProofCommand.hpp
src/commands/red/: .gitkeep  EditCommand.cpp  EditCommand.hpp  RedCommand.cpp  RedCommand.hpp
src/commands/rjson/: .gitkeep  RjsonCommand.cpp  RjsonCommand.hpp
src/editing/: .gitkeep
src/integration/: ToolDiscovery.cpp  ToolDiscovery.hpp
src/packaging/: .gitkeep
src/red/codec/: Gen1Codec.cpp  Gen1Codec.hpp
src/red/comparison/: Comparison.cpp  Comparison.hpp  ProgressComparison.cpp  ProgressComparison.hpp
src/red/data/: Gen1Names.cpp  Gen1Names.hpp  Gen1PokemonData.hpp  Gen1PokemonMath.cpp  Gen1PokemonMath.hpp
src/red/editing/: EditSession.cpp  EditSession.hpp
src/red/events/: EventCatalog.cpp  EventCatalog.hpp
src/red/generation/: SemanticGenerator.cpp  SemanticGenerator.hpp
src/red/json/: RedDecoder.cpp  RedDecoder.hpp  RedJsonDocument.cpp  RedJsonDocument.hpp
src/red/proof/: PostEmulator.cpp  PostEmulator.hpp
src/red/reporting/: SaveSummary.cpp  SaveSummary.hpp
src/red/save/: RedSave.cpp  RedSave.hpp
src/red/validation/: SaveValidator.cpp  SaveValidator.hpp
src/reporting/: .gitkeep
src/util/: .gitkeep  AtomicOutput.cpp  AtomicOutput.hpp  OutputPath.cpp  OutputPath.hpp  ResourceLocator.cpp  ResourceLocator.hpp  Sha256.cpp  Sha256.hpp  ZipWriter.cpp  ZipWriter.hpp
tests/: command_router_tests.cpp
